Changed DIV values for columns

--- a/index.html
+++ b/index.html
@@ -14,9 +14,39 @@
     <title>Weather App</title>
   </head>
   <body>
-    <div class="container"></div>
-    <h1>Hello World 🌎</h1>
-    <a href="" class="btn btn-primary">Click Here</a>
+    <div class="container">
+      <h1>New Jersey</h1>
+      <ul>
+        <li>Partly Cloudy</li>
+      </ul>
+      <div class="row">
+        <div class="col=6">
+          <img
+            src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png"
+            alt="partlyCloudy icon"
+            class="weather-icon float-left"
+          />
+          29°C | °F
+        </div>
+        <div class="col-6">
+          <ul>
+            <li>Precipitation: 15%</li>
+            <li>Humidity: 53%</li>
+            <li>Wind: 13km/h</li>
+          </ul>
+        </div>
+      </div>
+      <small>
+        <a
+          href="https://github.com/melcave43/vanilla-weather-app.git"
+          target="_blank"
+        >
+          Open-source code</a
+        >
+        by Melissa Cavé
+      </small>
+      <a href="" class="btn btn-primary">Click Here</a>
+    </div>
     <script src="src/app.js"></script>
   </body>
 </html>
