--- a/index.html
+++ b/index.html
@@ -4,48 +4,51 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="src/style.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="src/style.css" />
+
     <title>Weather App</title>
   </head>
   <body>
     <div class="container">
-      <h1>New Jersey</h1>
-      <ul>
-        <li>Partly Cloudy</li>
-      </ul>
-      <div class="row">
-        <div class="col=6">
-          <img
-            src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png"
-            alt="partlyCloudy icon"
-            class="weather-icon float-left"
-          />
-          29°C | °F
-        </div>
-        <div class="col-6">
+      <div class="weather-app-wrapper">
+        <div class="weather-app">
+          <h1>New Jersey</h1>
           <ul>
-            <li>Precipitation: 15%</li>
-            <li>Humidity: 53%</li>
-            <li>Wind: 13km/h</li>
+            <li>Partly Cloudy</li>
           </ul>
+          <div class="row">
+            <div class="col-6">
+              <img
+                src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png"
+                alt="partlyCloudy icon"
+              />
+              29°C | °F
+            </div>
+            <div class="col-6">
+              <ul>
+                <li>Precipitation: 15%</li>
+                <li>Humidity: 53%</li>
+                <li>Wind: 13km/h</li>
+              </ul>
+            </div>
+          </div>
         </div>
+        <small>
+          <a
+            href="https://github.com/melcave43/vanilla-weather-app.git"
+            target="_blank"
+          >
+            Open-source code</a
+          >
+          by Melissa Cavé
+        </small>
       </div>
-      <small>
-        <a
-          href="https://github.com/melcave43/vanilla-weather-app.git"
-          target="_blank"
-        >
-          Open-source code</a
-        >
-        by Melissa Cavé
-      </small>
-      <a href="" class="btn btn-primary">Click Here</a>
     </div>
     <script src="src/app.js"></script>
   </body>
