--- a/index.html
+++ b/index.html
@@ -18,17 +18,26 @@
     <div class="container">
       <div class="weather-app-wrapper">
         <div class="weather-app">
-          <h1>New Jersey</h1>
-          <ul>
-            <li>Partly Cloudy</li>
-          </ul>
+          <div class="overview">
+            <h1>New Jersey</h1>
+            <ul>
+              <li>Sunday 11:48</li>
+              <li>Partly Cloudy</li>
+            </ul>
+          </div>
           <div class="row">
             <div class="col-6">
-              <img
-                src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png"
-                alt="partlyCloudy icon"
-              />
-              29°C | °F
+              <div class="clearfix weather-temperature">
+                <img
+                  src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png"
+                  alt="partlyCloudy"
+                  class="float-left"
+                />
+                <div class="float-left">
+                  <strong>12</strong
+                  ><span class="units">°C | <a href="#"></a> °F </span>
+                </div>
+              </div>
             </div>
             <div class="col-6">
               <ul>
