Updated JS, and HTML; added in axios file

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="src/style.css" />
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 
     <title>Weather App</title>
   </head>
@@ -78,8 +79,8 @@
               <div class="col-6">
                 <ul>
                   <li>Precipitation: 15%</li>
-                  <li>Humidity:<span id="humidity"></span> 53%</li>
-                  <li>Wind: 13km/h</li>
+                  <li>Humidity:<span id="humidity">0</span>%</li>
+                  <li>Wind: <span id="wind">4</span>mph</li>
                 </ul>
               </div>
             </div>
