Adjusted search engine

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <form class="search-form" id="search-form">
                   <input
                     type="search"
-                    placeholder="Enter a city"
+                    placeholder="Enter a city.."
                     id="city-input"
                   />
                   <input
@@ -78,8 +78,8 @@
               </div>
               <div class="col-6">
                 <ul>
-                  <li>Precipitation: 15%</li>
-                  <li>Humidity:<span id="humidity">0</span>%</li>
+                  <li>Precipitation: <span id="precipitation">0</span>%</li>
+                  <li>Humidity: <span id="humidity">0</span>%</li>
                   <li>Wind: <span id="wind">4</span>mph</li>
                 </ul>
               </div>
