Added in Netlify link

--- a/index.html
+++ b/index.html
@@ -135,6 +135,13 @@
           >
             Open-source code</a
           >
+          and
+          <a
+            href="https://628a6b953e120d0008dac531--unrivaled-toffee-64ca36.netlify.app"
+            target="_blank"
+          >
+            hosted on Netlify
+          </a>
           by Melissa Cavé
         </small>
       </div>
