Added id's and function for Cities at the top of weather-app

--- a/index.html
+++ b/index.html
@@ -22,16 +22,32 @@
           <div class="overview">
             <div class="row">
               <div class="col">
-                <button type="button" class="btn btn-outline-primary btn-sm">
+                <button
+                  id="london"
+                  type="button"
+                  class="btn btn-outline-primary btn-sm"
+                >
                   London
                 </button>
-                <button type="button" class="btn btn-outline-primary btn-sm">
+                <button
+                  id="paris"
+                  type="button"
+                  class="btn btn-outline-primary btn-sm"
+                >
                   Paris
                 </button>
-                <button type="button" class="btn btn-outline-primary btn-sm">
+                <button
+                  id="chicago"
+                  type="button"
+                  class="btn btn-outline-primary btn-sm"
+                >
                   Chicago
                 </button>
-                <button type="button" class="btn btn-outline-primary btn-sm">
+                <button
+                  id="tokyo"
+                  type="button"
+                  class="btn btn-outline-primary btn-sm"
+                >
                   Tokyo
                 </button>
 
