Updated forecast in HTML and CSS

--- a/index.html
+++ b/index.html
@@ -111,7 +111,8 @@
                   src="https://ssl.gstatic.com/onebox/weather/48/sunny_s_cloudy.png"
                   alt="sunnyCloudy icon"
                 />
-                <span class="climate"> 32℃</span>
+                <span class="climate-max"> 32℃</span>
+                <span class="weather-forecast-temperature-min"> 27℃</span>
               </div>
               <div class="col-2">
                 <span class="days"> SUN</span>
@@ -119,7 +120,8 @@
                   src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png"
                   alt="partlyCloudy"
                 />
-                <span class="climate"> 29℃</span>
+                <span class="climate-max"> 29℃</span>
+                <span class="weather-forecast-temperature-min"> 21℃</span>
               </div>
               <div class="col-2">
                 <span class="days"> MON</span>
@@ -127,7 +129,8 @@
                   src="https://ssl.gstatic.com/onebox/weather/48/cloudy.png"
                   alt="Cloudy icon"
                 />
-                <span class="climate"> 20℃</span>
+                <span class="climate-max"> 20℃</span>
+                <span class="weather-forecast-temperature-min"> 12℃</span>
               </div>
               <div class="col-2">
                 <span class="days"> TUES</span>
@@ -135,7 +138,8 @@
                   src="https://ssl.gstatic.com/onebox/weather/48/rain_light.png"
                   alt="Rainy icon"
                 />
-                <span class="climate"> 18℃</span>
+                <span class="climate-max"> 18℃</span>
+                <span class="weather-forecast-temperature-min"> 12℃</span>
               </div>
               <div class="col-2">
                 <span class="days"> WED</span>
@@ -143,7 +147,8 @@
                   src="https://ssl.gstatic.com/onebox/weather/48/thunderstorms.png"
                   alt="Rainy icon"
                 />
-                <span class="climate"> 22℃</span>
+                <span class="climate-max"> 22℃</span>
+                <span class="weather-forecast-temperature-min"> 19℃</span>
               </div>
             </div>
           </div>
