Attempted to add in more JS for forecast response data

--- a/index.html
+++ b/index.html
@@ -104,55 +104,58 @@
                 </ul>
               </div>
             </div>
-            <div class="row justify-content-center">
-              <div class="col-2">
-                <span class="days"> SAT</span>
-                <img
-                  src="https://ssl.gstatic.com/onebox/weather/48/sunny_s_cloudy.png"
-                  alt="sunnyCloudy icon"
-                />
-                <span class="climate-max"> 32℃</span>
-                <span class="weather-forecast-temperature-min"> 27℃</span>
-              </div>
-              <div class="col-2">
-                <span class="days"> SUN</span>
-                <img
-                  src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png"
-                  alt="partlyCloudy"
-                />
-                <span class="climate-max"> 29℃</span>
-                <span class="weather-forecast-temperature-min"> 21℃</span>
-              </div>
-              <div class="col-2">
-                <span class="days"> MON</span>
-                <img
-                  src="https://ssl.gstatic.com/onebox/weather/48/cloudy.png"
-                  alt="Cloudy icon"
-                />
-                <span class="climate-max"> 20℃</span>
-                <span class="weather-forecast-temperature-min"> 12℃</span>
-              </div>
-              <div class="col-2">
-                <span class="days"> TUES</span>
-                <img
-                  src="https://ssl.gstatic.com/onebox/weather/48/rain_light.png"
-                  alt="Rainy icon"
-                />
-                <span class="climate-max"> 18℃</span>
-                <span class="weather-forecast-temperature-min"> 12℃</span>
-              </div>
-              <div class="col-2">
-                <span class="days"> WED</span>
-                <img
-                  src="https://ssl.gstatic.com/onebox/weather/48/thunderstorms.png"
-                  alt="Rainy icon"
-                />
-                <span class="climate-max"> 22℃</span>
-                <span class="weather-forecast-temperature-min"> 19℃</span>
+            <div class="weather-forecast" id="forecast">
+              <div class="row justify-content-center">
+                <div class="col-2">
+                  <span class="days"> SAT</span>
+                  <img
+                    src="https://ssl.gstatic.com/onebox/weather/48/sunny_s_cloudy.png"
+                    alt="sunnyCloudy icon"
+                  />
+                  <span class="climate-max"> 32℃</span>
+                  <span class="weather-forecast-temperature-min"> 27℃</span>
+                </div>
+                <div class="col-2">
+                  <span class="days"> SUN</span>
+                  <img
+                    src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png"
+                    alt="partlyCloudy"
+                  />
+                  <span class="climate-max"> 29℃</span>
+                  <span class="weather-forecast-temperature-min"> 21℃</span>
+                </div>
+                <div class="col-2">
+                  <span class="days"> MON</span>
+                  <img
+                    src="https://ssl.gstatic.com/onebox/weather/48/cloudy.png"
+                    alt="Cloudy icon"
+                  />
+                  <span class="climate-max"> 20℃</span>
+                  <span class="weather-forecast-temperature-min"> 12℃</span>
+                </div>
+                <div class="col-2">
+                  <span class="days"> TUES</span>
+                  <img
+                    src="https://ssl.gstatic.com/onebox/weather/48/rain_light.png"
+                    alt="Rainy icon"
+                  />
+                  <span class="climate-max"> 18℃</span>
+                  <span class="weather-forecast-temperature-min"> 12℃</span>
+                </div>
+                <div class="col-2">
+                  <span class="days"> WED</span>
+                  <img
+                    src="https://ssl.gstatic.com/onebox/weather/48/thunderstorms.png"
+                    alt="Rainy icon"
+                  />
+                  <span class="climate-max"> 22℃</span>
+                  <span class="weather-forecast-temperature-min"> 19℃</span>
+                </div>
               </div>
             </div>
           </div>
         </div>
+
         <small>
           <a
             href="https://github.com/melcave43/vanilla-weather-app.git"
