--- a/index.html
+++ b/index.html
@@ -22,37 +22,8 @@
           <div class="overview">
             <div class="row">
               <div class="col">
-                <button
-                  id="london"
-                  type="button"
-                  class="btn btn-outline-primary btn-sm"
-                >
-                  London
-                </button>
-                <button
-                  id="paris"
-                  type="button"
-                  class="btn btn-outline-primary btn-sm"
-                >
-                  Paris
-                </button>
-                <button
-                  id="chicago"
-                  type="button"
-                  class="btn btn-outline-primary btn-sm"
-                >
-                  Chicago
-                </button>
-                <button
-                  id="tokyo"
-                  type="button"
-                  class="btn btn-outline-primary btn-sm"
-                >
-                  Tokyo
-                </button>
-
+                <h2>Weather App</h2>
                 <br />
-
                 <form class="search-form" id="search-form">
                   <input
                     type="search"
@@ -63,12 +34,6 @@
                     type="submit"
                     value="Search"
                     class="btn btn-outline-primary"
-                  />
-                  <input
-                    type="submit"
-                    value="Current"
-                    class="btn btn-outline-success"
-                    id="current-location-button"
                   />
                 </form>
               </div>
