--- a/index.html
+++ b/index.html
@@ -30,11 +30,7 @@
                     placeholder="Enter a city.."
                     id="city-input"
                   />
-                  <input
-                    type="submit"
-                    value="Search"
-                    class="btn btn-outline-primary"
-                  />
+                  <input type="submit" value="Search" class="btn btn-primary" />
                 </form>
               </div>
               <br />
